# web-lightning

./: .gitignore  CMakeLists.txt  LICENSE  README.md  index.html
examples/: bezier_curve_gpu.cpp  centered_box.cpp  example0.cpp  random_boxes.cpp  random_text.cpp  random_textured_boxes.cpp  random_textured_boxes_grid.cpp  round_segmented_progress_Indicator.cpp
src/: config.hpp  runtime.hpp  web_lightning.hpp
src/algebra/: algebra.hpp  arc_length.hpp  arithmetic.hpp  bezier.hpp  common.hpp  line.hpp  matrix.hpp  vector.hpp
src/animation/: functions.hpp  path_traversal.hpp  property_transform.hpp  simple.hpp
src/common/: concepts.hpp  error.hpp  logging.hpp  memory.hpp  random.hpp  time.hpp  types.hpp  unicode.hpp  utilities.hpp
src/decoders/: lizard.hpp  webp.hpp
src/embedded/: embedded_font.cpp  embedded_font.hpp
src/font_rendering/: font_rasterizer.hpp  font_rasterizer_cpu.hpp  font_renderer.hpp  raster_cache.hpp  rasteried_font.hpp
src/gpu_api/: buffer.hpp  gpu_api.hpp  image.hpp  pso.hpp  render_target.hpp  shader.hpp  webgl.cpp  webgl.hpp  webgl_api.hpp  webgl_buffer.cpp  webgl_buffer.hpp  webgl_error.hpp  webgl_image.cpp  webgl_image.hpp  webgl_pso.cpp  webgl_pso.hpp  webgl_render_target.cpp  webgl_render_target.hpp  webgl_shader.cpp  webgl_shader.hpp
src/main_surface/: main_surface.cpp  main_surface.hpp  main_surface.tpp
src/presenting/: events.hpp  present_surface.hpp  present_surface_win32.hpp  present_surface_x11.hpp
src/rendering/: bezier_renderer.hpp  bezier_renderer_gpu.hpp  box_renderer.hpp  circular_arc_renderer.hpp  color.hpp  font_rasterizer_cpu.hpp  font_rasterizer_gpu.hpp  font_renderer.hpp  line_renderer.hpp  quad.hpp  raster_cache.hpp  rasterized_font.hpp  renderer.hpp  textured_quad_renderer.hpp  vector_path.hpp  vector_rasterizer.hpp  vector_rasterizer_cpu.hpp  vector_rasterizer_gpu.hpp
src/shaders/: bezier_approx_frag.cpp  bezier_approx_vert.cpp  box_frag.cpp  box_shader_frag.glsl  box_shader_vert.glsl  box_vert.cpp  circular_arc_frag.cpp  cirtular_arc_vert.cpp  common.cpp  common.hpp  font_atlas_text_frag.cpp  font_atlas_text_vert.cpp  line_frag.cpp  line_vert.cpp  opaque_default_frag.glsl  opaque_default_vert.glsl  textured_quad_frag.cpp  textured_quad_vert.cpp
src/widgets/: box.hpp  container.hpp  grid.hpp  label.hpp  text_box.hpp  vector_element.hpp  vector_paths.hpp  widget.hpp
src/widgets/particles/: curve_bound.hpp
src/widgets/progress_indicators/: round_segmented.hpp
